# perf-test

./: .gitignore  TODO.md  run_tests.sh
cpp/: Makefile  config.cfg  debian-setup.sh  meson.build
cpp/include/: api.hpp  config.hpp  filter.hpp  utils.hpp
cpp/src/: api.cpp  config.cpp  filter.cpp  main.cpp  utils.cpp
db/: connect_db.sh  create_db.sh  insert.sh  run_db.sh
go/: Makefile  build.sh  build_and_watch.sh  config.yml  debian-setup.sh  entrypoint.sh  go.mod  go.sum
go/src/: api.go  config.go  filter.go  main.go  utils.go
js/: Makefile  install.sh  package-lock.json  package.json
js/src/: app.module.ts  main.ts
js/src/entity/: entity.controller.ts  entity.module.ts  entity.service.ts
js/src/entity/dto/: entity-request.dto.ts  grid.request.ts
js/src/entity/dto/entity-request.dto/: entity-request.dto.spec.ts  (+1 more)
js/src/entity/entity/: entity.controller.ts  entity.service.ts
js/src/entity/utils/: filter.ts
python/: manage.py  run.sh
python-django/: requirements.txt  requirements_pypy.txt  run.sh  run_pypy.sh  test.http
python-django/pythontest/: asgi.py  settings.py  urls.py  views.py
python-django/pythontest/utils/: filter.py
python-fastapi/: requirements.txt  run.sh
python-fastapi/src/: filter.py  main.py  models.py  schemas.py
python/pythontest/: apps.py  models.py  settings.py  views.py  wsgi.py
python/pythontest/utils/: filter.py
rust/: Cargo.toml  Makefile  db2code.sh  install.sh
rust/src/: db.rs  dto.rs  filter.rs  main.rs
rust/src/entities/: entity.rs  mod.rs  prelude.rs
test/: data.json  results.txt  run_query.sh
(+2 files in other folders)
