[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "^1.1.1", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.214", features = ["derive"] }
dotenvy = "0.15.7"
unidecode = "0.3.0"

[dev-dependencies]
sea-orm-cli = "1.1.1"
cargo-watch = "8.5.3"